# src/domain/model/collection/Collection.ts
@@ -1,9 +1,10 @@
-import { Nft } from "@prisma/client"
+import { Comments, Nft } from "@prisma/client"
 
 export type Collection = {
     id: string,
     title: string,
     description: string | null,
     userId: string,
-    isPublic: boolean
+    isPublic: boolean,
+    Comments?: Comments[]
 }
